--- a/html_projects/index1.html
+++ b/html_projects/index1.html
@@ -60,6 +60,8 @@
       <p>This is <del>deleted</del> text</p>
       <p>This is <mark>marked</mark> text</p>
       <br>
+      <br>
+      <br>
       <h4>Unordered List</h4>
       <ul>
         <li>pizza dough</li>
@@ -189,6 +191,17 @@
       hello
     </span>
 
+    <table>
+      <tr>
+        <th>Heading 1</th>
+        <th>Heading 2</th>
+      </tr>
+      <tr>
+        <td>Data 1</td>
+        <td>Data 2</td>
+      </tr>
+    </table>
+
     <footer>
       <hr>
       author: Vincent Sang
@@ -197,6 +210,17 @@
       <br>
       <small><a href="mailto:vincentsang06@gmail.com">vincentsang06@gmail.com</a></small>
     </footer>
+
+    <div>
+      <label for="greeting">Greeting:</label>
+      <select id="greeting" name="greeting">
+        <option value="hello">Hello</option>
+        <option value="hola">Hola</option>
+      </select> 
+    </div>
+
+
+    
 
   </body>
 </html>
