Full sync before rebase

--- a/html_projects/cascading.html
+++ b/html_projects/cascading.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Style Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is page 2</h1>
+    <h1>This is a header</h1>
 
     <p id="p1" class="odd">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, tempora. Laudantium aliquam dolorem commodi dolore vel porro, facere temporibus mollitia nemo hic ex doloremque consequuntur, debitis, odit esse minus laboriosam.</p>
     <p id="p2" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Doloribus, cumque. Doloremque, voluptatibus. Quasi, cumque. Doloremque, voluptatibus. Quasi, cumque.</p>
     <p id="p3" class="dumb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Doloribus, cumque. Doloremque, voluptatibus. Quasi, cumque. Doloremque, voluptatibus. Quasi, cumque.</p>
+    <p id="p4" class="even">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum. Doloribus, cumque. Doloremque, voluptatibus. Quasi, cumque. Doloremque, voluptatibus. Quasi, cumque.</p>
 
+    <p class="dumb">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur magnam beatae, expedita accusantium possimus iure at quidem assumenda repellat, reiciendis recusandae, sit placeat molestiae et? Sunt blanditiis esse voluptatibus quas.</p>
 </body>
 </html>
